--- a/peakform/package.json
+++ b/peakform/package.json
@@ -13,10 +13,13 @@
     "@langchain/google-genai": "^0.2.18",
     "dotenv": "^17.2.2",
     "langchain": "^0.3.34",
+    "@heroui/navbar": "^2.2.24",
+    "@heroui/system": "^2.4.22",
+    "@heroui/theme": "^2.4.22",
+    "framer-motion": "^12.23.22",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
